# postgres-mcp

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .prettierrc  Dockerfile  INTEGRATION_TESTS_PLAN.md  README.md  SUMMARY.md  TASK.md  docker-compose.yml  env.example  jest.config.js  package.json  pr_body.md  pyproject.toml  pytest.ini  requirements.txt  rollup.config.js  run-docker-postgres-db.sh  run-mcp.sh  run_tests.py  tsconfig.json
.cursor/rules/: generics.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-tests.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CODE_EXAMPLES.md  IMPLEMENTATION_NOTES.md  INTEGRATION_TESTS_PLAN.md  README.md  TASK.md  index.md
docs/api/: clear_cache.md  get_cache_stats.md  get_metrics.md  index.md  reset_metrics.md
docs/guides/: advanced_types.md  filters.md  getting-started.md  index.md
examples/: auxiliary-services-example.ts  basic-usage.ts  filter-system-example.ts  mcp-handlers-test.js  mcp-interface-example.ts  postgres-connection-example.ts  service-layer-example.ts  simple-pg-example.ts  views-functions-example.ts
src/: index.ts
src/core/: MCPConfig.ts  MCPRouter.ts  PostgresMCPServer.ts  types.ts
src/database/: PostgresConfig.ts  PostgresConnection.ts  PostgresConnectionManager.ts  PostgresQueryBuilder.ts  PostgresSchemaManager.ts  PostgresSchemaQueries.ts
src/filters/: index.ts  (+5 more)
standalone_tests/: README.md  conftest.py  pytest.ini  test_integrated.py  test_standalone_filters.py  test_standalone_query_builder.py
tests/: conftest.py  mock_handlers.py  mock_models.py  mock_services.py
(+105 files in other folders)
